ビルドシステムのXRCファイルのgettextによるメッセージ置き換えへの対応とkrkrfontの修正
Refs #6

--- a/src/tools/krkrfont/locale/ja.po
+++ b/src/tools/krkrfont/locale/ja.po
@@ -95,98 +95,131 @@ msgstr "処理中"
 msgid "Generating font file ..."
 msgstr "フォントファイルを作成中 ..."
 
-#~ msgid "Pre-rendered Font Generator"
-#~ msgstr "レンダリング済みフォント作成"
+#. ---------------------------------------------------------------------------
+#: .xrcmsg:1
+msgid "Pre-rendered Font Generator"
+msgstr "レンダリング済みフォント作成"
 
-#~ msgid "Font source"
-#~ msgstr "フォント"
+#: .xrcmsg:2
+msgid "Font source"
+msgstr "フォント"
 
-#~ msgid "&Select a font"
-#~ msgstr "一覧から選択(&S)"
+#: .xrcmsg:3
+msgid "&Select a font"
+msgstr "一覧から選択(&S)"
 
-#~ msgid "Selec&t a file"
-#~ msgstr "ファイルを指定(&T)"
+#: .xrcmsg:4
+msgid "Selec&t a file"
+msgstr "ファイルを指定(&T)"
 
-#~ msgid "..."
-#~ msgstr "..."
+#: .xrcmsg:5 .xrcmsg:15
+msgid "..."
+msgstr "..."
 
-#~ msgid "Font Setting"
-#~ msgstr "フォント設定"
+#: .xrcmsg:6
+msgid "Font Setting"
+msgstr "フォント設定"
 
-#~ msgid "Font Family &Name :"
-#~ msgstr "フォントファミリ名(&N) :"
+#: .xrcmsg:7
+msgid "Font Family &Name :"
+msgstr "フォントファミリ名(&N) :"
 
-#~ msgid "Size (in &pixel) :"
-#~ msgstr "サイズ(ピクセル単位)(&P) :"
+#: .xrcmsg:8
+msgid "Size (in &pixel) :"
+msgstr "サイズ(ピクセル単位)(&P) :"
 
-#~ msgid "&Antialiased"
-#~ msgstr "アンチエイリアス(&A)"
+#: .xrcmsg:9
+msgid "&Antialiased"
+msgstr "アンチエイリアス(&A)"
 
-#~ msgid "No &Hinting"
-#~ msgstr "ヒンティングを行わない(&H)"
+#: .xrcmsg:10
+msgid "No &Hinting"
+msgstr "ヒンティングを行わない(&H)"
 
-#~ msgid "&Bold"
-#~ msgstr "太字(&B)"
+#: .xrcmsg:11
+msgid "&Bold"
+msgstr "太字(&B)"
 
-#~ msgid "For&ce Auto Hinting"
-#~ msgstr "自動ヒンティングを行う(&C)"
+#: .xrcmsg:12
+msgid "For&ce Auto Hinting"
+msgstr "自動ヒンティングを行う(&C)"
 
-#~ msgid "Generate font &metrics only"
-#~ msgstr "フォントメトリックのみを生成(&M)"
+#: .xrcmsg:13
+msgid "Generate font &metrics only"
+msgstr "フォントメトリックのみを生成(&M)"
 
-#~ msgid "&Output file"
-#~ msgstr "出力ファイル(&O)"
+#: .xrcmsg:14
+msgid "&Output file"
+msgstr "出力ファイル(&O)"
 
-#~ msgid "Preview"
-#~ msgstr "プレビュー"
+#: .xrcmsg:16
+msgid "Preview"
+msgstr "プレビュー"
 
-#~ msgid "Generate"
-#~ msgstr "作成"
+#: .xrcmsg:17
+msgid "Generate"
+msgstr "作成"
 
-#~ msgid "Close"
-#~ msgstr "閉じる"
+#: .xrcmsg:18
+msgid "Close"
+msgstr "閉じる"
 
-#~ msgid "Font Preview"
-#~ msgstr "フォント プレビュー"
+#: .xrcmsg:19
+msgid "Font Preview"
+msgstr "フォント プレビュー"
 
-#~ msgid "Close preview window"
-#~ msgstr "プレビューを閉じる"
+#: .xrcmsg:20
+msgid "Close preview window"
+msgstr "プレビューを閉じる"
 
-#~ msgid "  Zoom :"
-#~ msgstr "  倍率 :"
+#: .xrcmsg:21
+msgid "  Zoom :"
+msgstr "  倍率 :"
 
-#~ msgid "x1"
-#~ msgstr "等倍"
+#: .xrcmsg:22
+msgid "x1"
+msgstr "等倍"
 
-#~ msgid "x2"
-#~ msgstr "x2"
+#: .xrcmsg:23
+msgid "x2"
+msgstr "x2"
 
-#~ msgid "x3"
-#~ msgstr "x3"
+#: .xrcmsg:24
+msgid "x3"
+msgstr "x3"
 
-#~ msgid "x4"
-#~ msgstr "x4"
+#: .xrcmsg:25
+msgid "x4"
+msgstr "x4"
 
-#~ msgid "x5"
-#~ msgstr "x5"
+#: .xrcmsg:26
+msgid "x5"
+msgstr "x5"
 
-#~ msgid "x6"
-#~ msgstr "x6"
+#: .xrcmsg:27
+msgid "x6"
+msgstr "x6"
 
-#~ msgid "x7"
-#~ msgstr "x7"
+#: .xrcmsg:28
+msgid "x7"
+msgstr "x7"
 
-#~ msgid "x8"
-#~ msgstr "x8"
+#: .xrcmsg:29
+msgid "x8"
+msgstr "x8"
 
-#~ msgid "x10"
-#~ msgstr "x10"
+#: .xrcmsg:30
+msgid "x10"
+msgstr "x10"
 
-#~ msgid "x12"
-#~ msgstr "x12"
+#: .xrcmsg:31
+msgid "x12"
+msgstr "x12"
 
-#~ msgid "x14"
-#~ msgstr "x14"
+#: .xrcmsg:32
+msgid "x14"
+msgstr "x14"
 
-#~ msgid "x16"
-#~ msgstr "x16"
+#: .xrcmsg:33
+msgid "x16"
+msgstr "x16"
