--- a/src/tools/krkrfont/locale/ja.po
+++ b/src/tools/krkrfont/locale/ja.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2007 W.Dee and contributors
 # This file is distributed under the same license as the Kirikiri3 package.
 # W.Dee <dee@kikyou.info>, 2005.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -15,13 +15,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: msw/NativeFreeTypeFace.cpp:87 msw/NativeFreeTypeFace.cpp:102
-#: msw/NativeFreeTypeFace.cpp:132 msw/NativeFreeTypeFace.cpp:154
-#: msw/NativeFreeTypeFace.cpp:170 msw/NativeFreeTypeFace.cpp:182
-#: msw/NativeFreeTypeFace.cpp:208 FreeType.cpp:131
+#: unix/NativeFreeTypeFace.cpp:75 unix/NativeFreeTypeFace.cpp:81
+#: unix/NativeFreeTypeFace.cpp:91 FreeType.cpp:131
 #, c-format
 msgid "Font '%1$s' cannot be used"
 msgstr "フォント '%1$s' は使用できません"
+
+#: unix/NativeFreeTypeDriver.cpp:54
+msgid "FcInit failed"
+msgstr "FcInit呼び出しに失敗しました"
 
 #. デフォルトのフォントを探し、選択させる
 #. Default font initially selected in the main dialog.
@@ -225,6 +227,3 @@ msgstr "x14"
 #: .xrcmsg:33
 msgid "x16"
 msgstr "x16"
-
-#~ msgid "FcInit failed"
-#~ msgstr "FcInit呼び出しに失敗しました"
